# blender-cnc-toolkit

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  commitlint.config.cjs  dist.py  dist.sh  pyproject.toml  release-please-config.json  test.sh
.github/workflows/: commitlint.yml  release-please.yml  sync-init-versions.yml  test.yml
cyclesx/: GUIDE.md  __init__.py  blender_manifest.toml  node_arrange.py  operators.py  panel.py  properties.py  scene_builder.py
docs/adr/: 0001-interactive-addon-architecture.md
eevee_next/: README.md  __init__.py  blender_manifest.toml  crop_canvas.py  operators.py  panel.py  properties.py  scene_builder.py
hi_five/: __init__.py  blender_manifest.toml  crop_canvas.py  operators.py  panel.py  properties.py  scene_builder.py
tests/: conftest.py  helpers.py  test_compositor.py  test_config.py  test_properties.py  test_rebuild.py  test_registration.py  test_render.py  test_scene_state.py  test_visibility.py
