[project]
name = "blender-cnc-toolkit"
version = "0.3.1"  # x-release-please-version
requires-python = ">=3.11"

[dependency-groups]
test = ["pytest", "pytest-blender"]
dev = ["pre-commit", "ruff"]

[tool.ruff]
indent-width = 2
exclude = ["hi_five", "eevee_next", "cyclesx", "dist.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
